# sky_gl4

./: lint_add.cmd  pyproject.toml
gl_15_2_best_oop/: article.py
src/: pdf_bookmark.py  translit.py  translit1.py
src/gl_15_2_best_oop/: article.py
src/gl_16_1/: animal2.py  animals.py  dz_16_1.py  emplo2.py  emploee.py
src/gl_16_2/: Untitled-1.ipynb  card.ipynb  card.py  dz.txt  dz_vers2.txt  perrsons.py
tests/: test_insert.py  test_search.py
